# cmake-playground

./: CMakeLists.txt  README.md
.github/workflows/: cmake.yml
applications/: CMakeLists.txt
applications/boostHelloWorld/: CMakeLists.txt  main.cpp
applications/clipper2HelloWorld/: CMakeLists.txt  main.cpp
applications/cppCliHelloWorld/: App.xaml  App.xaml.cs  CMakeLists.txt  MainWindow.xaml  MainWindow.xaml.cs  main.cpp
applications/eigenHelloWorld/: CMakeLists.txt  main.cpp
applications/helloWorld/: CMakeLists.txt  main.cpp
applications/jsonHelloWorld/: CMakeLists.txt  main.cpp
applications/opencvHelloWorld/: CMakeLists.txt  main.cpp
applications/qtHelloWorld/: CMakeLists.txt  main.cpp
applications/wpfHelloWorld/: CMakeLists.txt  MainWindow.xaml  MainWindow.xaml.cs
applications/wpfHelloWorld/src/: MyTestClass.cs  Person.cs
applications/zipHelloWorld/: CMakeLists.txt  main.cpp
cmake/: CompilerFlags.cmake  SuperBuild.cmake
cmake/.NetSupport/: CppCliSupport.cmake  DotNetSupport.cmake  WpfSupport.cmake
doc/: CMakeLists.txt
doc/License/: license.txt
libraries/: CMakeLists.txt
libraries/activityLibrary/: CMakeLists.txt
libraries/activityLibrary/Properties/: Resources.Designer.cs  Resources.resx
libraries/activityLibrary/src/: Activity1.cs
libraries/sharedLibrary/: CMakeLists.txt
libraries/sharedLibrary/include/myproject/sharedLibrary/: export.h  string.h
libraries/sharedLibrary/python/: CMakeLists.txt
libraries/sharedLibrary/python/python/: __init__.py  setup.py
libraries/sharedLibrary/python/src/: sharedLibraryPython.cpp
libraries/sharedLibrary/src/: string.cpp
libraries/sharedLibrary/test/: CMakeLists.txt
libraries/sharedLibrary/test/src/: test_string.cpp
